--- a/style/style.html
+++ b/style/style.html
@@ -1,4 +1,4 @@
-<html>
+m<html>
 
 <head>
     <title>JQuery Style Lab</title>
@@ -15,9 +15,9 @@
 
     <img src="./shira.png" id="logo" width="100px">
 
-    <!-- PLEASE DO NOT ADD ANY JAVASCRIPT CODE HERE! :) -->
+    <!-- PLEASE DOhello NOT ADD ANY JAVASCRIPT CODE HERE! :)
     <script src="jquery.js"></script>
     <script src="style.js"></script>
 </body>
 
-</html>
+</html> -->
